--- a/deb-update.yml
+++ b/deb-update.yml
@@ -1,6 +1,7 @@
 ---
 - name: Debian Updates
   hosts: all
+  become: true
   tasks:
     - name: update
       apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
