--- a/deb-update.yml
+++ b/deb-update.yml
@@ -6,6 +6,7 @@
     - name: update
       apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
     - name: upgrade
+      become: true
       apt: 
         name: '*'
         state: latest 
